<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividad_formulario"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_view"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/Black"
        android:textSize="40dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_view_2"
        android:textColor="@color/Black"
        />

    <EditText
        android:id="@+id/nombre_apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_edit"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_view_3"
        android:textColor="@color/Black"
        />

    <EditText
        android:id="@+id/dni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_edit"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_view_4"
        android:textColor="@color/Black"
        />

    <Spinner
        android:id="@+id/nacionalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/nacionalidades"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_view_5"
        android:textColor="@color/Black"
        />

    <EditText
        android:id="@+id/correo_electronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_edit"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <TextView
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:text="@string/txt_view_6"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    </LinearLayout>

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_text" />

</LinearLayout>