<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividad_principal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_view_actividad_principal"
        android:textSize="20dp"
        android:textColor="@color/Black"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        />

    <Button
        android:id="@+id/btn_formulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_formulario_actividad_principal"
        />

    <Button
        android:id="@+id/btn_base_de_datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_base_de_datos"
        />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"
        >

    <Button
        android:id="@+id/btn_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_email_actividad_principal"
        />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>